--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,9 +15,9 @@ android:background="@drawable/login_bk"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="48dp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,8 +30,9 @@ android:background="@drawable/login_bk"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/Username"
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/txtLogin"
@@ -43,8 +44,9 @@ android:background="@drawable/login_bk"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/Password"
         android:inputType="textPassword"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/inputUsername"
@@ -55,8 +57,8 @@ android:background="@drawable/login_bk"
         android:id="@+id/forgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
-        android:text="Forget your Password ?"
+        android:layout_marginStart="150dp"
+        android:text="@string/forgot_pass"
         android:textColor="#5283C0"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
@@ -67,9 +69,9 @@ android:background="@drawable/login_bk"
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-android:textSize="24dp"
+        android:textSize="24sp"
         android:layout_marginTop="60dp"
-        android:text="Login"
+        android:text="@string/login"
         android:background="@drawable/button"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
@@ -81,7 +83,7 @@ android:textSize="24dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="48dp"
-        android:text="Vous n'avez pas de compte?"
+        android:text="@string/no_account"
         android:textColor="#5283C0"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/btnLogin"
@@ -92,11 +94,12 @@ android:textSize="24dp"
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        android:text="Sign Up"
-        android:textSize="14dp"
+        android:onClick="signup"
+        android:text="@string/text2"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/noAccount"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/noAccount"
