--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,9 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="16dp"
-        android:text="Sign up"
+        android:text="@string/text2"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="48dp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,8 +30,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Nom et Prenom"
+        android:hint="@string/text3"
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/txtLogin"
@@ -43,21 +44,24 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Email"
-        android:inputType="text"
+        android:hint="@string/Email"
         android:textSize="20sp"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/inputNom"
         app:layout_constraintStart_toStartOf="@+id/inputNom"
-        app:layout_constraintTop_toBottomOf="@+id/inputNom" />
+        app:layout_constraintTop_toBottomOf="@+id/inputNom"
+        tools:ignore="TextFields" />
 
     <EditText
         android:id="@+id/inputUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/Username"
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/inputEmail"
@@ -67,10 +71,11 @@
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/inputUsername"
         app:layout_constraintStart_toStartOf="@+id/inputUsername"
@@ -79,9 +84,10 @@
     <EditText
         android:id="@+id/editTextTextPassword3"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="@string/Confirm_Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
@@ -93,8 +99,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        android:text="Sign Up"
-        android:textSize="24dp"
+        android:text="@string/text2"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
@@ -105,7 +111,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="16dp"
-        android:text="J'ai deja un compte ?"
+        android:text="@string/text1"
         android:textColor="#5283C0"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
@@ -116,14 +122,15 @@
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="144dp"
         android:background="@drawable/button"
-        android:text="Login"
-        android:textSize="14dp"
+        android:onClick="login"
+        android:text="@string/login"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/accountExisting"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="@+id/accountExisting"
         app:layout_constraintTop_toBottomOf="@+id/accountExisting" />
 
